<?xml version="1.0"?>
<package format="2">
  <name>firo_gazebo_plugins</name>
  <version>1.0.0</version>
  <description>Plugins for firo gazebo simulation</description>
  <maintainer email="gabriel@gabrielb.com">Gabriel Brzeziński</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo</build_depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>roscpp</depend>
</package>
