<?xml version="1.0"?>
<package format="2">
  <name>firo_simulator</name>
  <version>1.0.0</version>
  <description>FIRO simulator metapackage</description>
  <maintainer email="gabriel@gabrielb.dev">Gabriel Brzeziński</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>firo_gazebo</exec_depend>
  <exec_depend>firo_gazebo_plugins</exec_depend>
  
  <export>
    <metapackage/>
  </export>
</package>
